// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default 1`] = `
<label
  class="MuiFormControlLabel-root-1"
>
  <span
    class="MuiButtonBase-root-20 MuiIconButton-root-14 MuiSwitchBase-root-10 MuiCheckbox-root-5 MuiCheckbox-colorSecondary-9 sc-bwzfXH jjwSZa"
  >
    <span
      class="MuiIconButton-label-19"
    >
      <svg
        class="MuiSvgIcon-root-23"
        focusable="false"
        viewBox="0 0 24 24"
        aria-hidden="true"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        class="MuiSwitchBase-input-13"
        type="checkbox"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </span>
  <span
    class="MuiTypography-root-37 MuiTypography-body1-46 MuiFormControlLabel-label-4"
  />
</label>
`;

exports[`renders with label 1`] = `
<label
  class="MuiFormControlLabel-root-1"
>
  <span
    class="MuiButtonBase-root-20 MuiIconButton-root-14 MuiSwitchBase-root-10 MuiCheckbox-root-5 MuiCheckbox-colorSecondary-9 sc-bwzfXH jjwSZa"
  >
    <span
      class="MuiIconButton-label-19"
    >
      <svg
        class="MuiSvgIcon-root-23"
        focusable="false"
        viewBox="0 0 24 24"
        aria-hidden="true"
      >
        <path
          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
        />
      </svg>
      <input
        class="MuiSwitchBase-input-13"
        type="checkbox"
        value=""
      />
    </span>
    <span
      class="MuiTouchRipple-root-30"
    />
  </span>
  <span
    class="MuiTypography-root-37 MuiTypography-body1-46 MuiFormControlLabel-label-4"
  >
    <p
      class="sc-bdVaJa dnyxcA"
    >
      Label
    </p>
  </span>
</label>
`;
